--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    background-image: url("./assets/Images/ales-nesetril-ex_p4AaBxbs-unsplash.jpg");
+    background-size: cover;
+}
+.style{
+    opacity: 0;
+}
